<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEFF0"
    tools:context="com.openclassrooms.entrevoisins.ui.neighbour_list.ProfileActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profile_avatar"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:adjustViewBounds="true"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_account" />

        <ImageButton
            android:id="@+id/profile_back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:srcCompat="?attr/actionModeCloseDrawable"
            android:contentDescription="@android:string/cancel"
            android:tint="#FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/profile_favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="232dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/Add_to_favorite_button"
            app:backgroundTint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_favorite_empty" />

        <TextView
            android:id="@+id/profile_title_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/profile_avatar"
            tools:text="@string/Profile_name_main" />

        <android.support.v7.widget.CardView
            android:id="@+id/profile_information_section"
            style="@style/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="4dp"
            app:layout_constraintTop_toBottomOf="@id/profile_avatar">


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp">

                <TextView
                    android:id="@+id/profile_neighbour_name"
                    style="@style/cardText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/Profile_name_info" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintTop_toBottomOf="@+id/profile_neighbour_name"
                    android:layout_marginBottom="5dp" />


                <ImageView
                    android:id="@+id/profile_location_icon"
                    style="@style/cardIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/profile_neighbour_name"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_baseline_location_on_24"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_neighbour_name" />


                <TextView
                    android:id="@+id/profile_location_text"
                    style="@style/cardText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@+id/profile_location_icon"
                    app:layout_constraintTop_toTopOf="@+id/profile_location_icon"
                    tools:text="@string/Profile_location" />

                <ImageView
                    android:id="@+id/profile_phone_icon"
                    style="@style/cardIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/profile_location_icon"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_baseline_phone_24"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_location_icon" />


                <TextView
                    android:id="@+id/profile_phone_text"
                    style="@style/cardText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@+id/profile_phone_icon"
                    app:layout_constraintTop_toTopOf="@+id/profile_phone_icon"
                    tools:text="@string/Profile_phone_number" />


                <ImageView
                    android:id="@+id/profile_account_icon"
                    style="@style/cardIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/profile_neighbour_name"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_baseline_language_24"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_phone_icon" />


                <TextView
                    android:id="@+id/profile_social_account_text"
                    style="@style/cardText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@+id/profile_account_icon"
                    app:layout_constraintTop_toTopOf="@+id/profile_account_icon"
                    tools:text="@string/Profile_social_account" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/profile_about_me_section"
            style="@style/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="4dp"
            app:layout_constraintTop_toBottomOf="@+id/profile_information_section">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/profile_about_me_title"
                    style="@style/cardText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Profile_about_me_title"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintTop_toBottomOf="@+id/profile_about_me_title" />

                <TextView
                    android:id="@+id/profile_about_me_text"
                    style="@style/cardText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:paddingBottom="10dp"
                    tools:text="@string/Profile_about_me_description" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
